<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:mainActivityInstance=".activities.MainActivity">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:hint="@string/search_knocknock" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_bar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableLeft="@drawable/ic_local_offer"
                    android:drawableStart="@drawable/ic_local_offer"
                    android:gravity="center_vertical"
                    android:text="@string/offers"
                    android:textSize="15sp" />

                <net.cachapa.expandablelayout.ExpandableLinearLayout
                    android:id="@+id/expandable_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:el_duration="0"
                    app:el_expanded="false">

                    <com.daimajia.slider.library.SliderLayout
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:layout_expandable="true">

                        <TextView
                            android:id="@+id/offer_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/white"
                            android:gravity="end"
                            android:padding="3dp"
                            android:text="@string/explore"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/offer_description"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_below="@id/offer_title"
                            android:background="@android:color/white"
                            android:padding="3dp"
                            android:text="@string/explore"
                            android:textSize="15sp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/offer_description"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="10dp"
                            android:background="@drawable/red_background">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:onClick="hideOfferDetails"
                                android:padding="8dp"
                                android:text="@string/close"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>
                    </RelativeLayout>
                </net.cachapa.expandablelayout.ExpandableLinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableLeft="@drawable/ic_explore"
                    android:drawableStart="@drawable/ic_explore"
                    android:gravity="center_vertical"
                    android:text="@string/explore"
                    android:textSize="15sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/main_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="3dp" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/custom_search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:paddingBottom="0dp"
            android:visibility="gone">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cancel"
                android:onClick="closeCustomSearchView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_items_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="60dp"
                android:scrollbars="vertical" />

        </RelativeLayout>

    </FrameLayout>


</RelativeLayout>
